Update privacy policy with comprehensive Wall Wood Stud Finder details

--- a/studfinder/privacy.html
+++ b/studfinder/privacy.html
@@ -81,11 +81,11 @@
     <header>
         <div class="container">
             <nav>
-                <a href="/studfinder" class="logo">Stud Finder</a>
+                <a href="/" class="logo">Stud Finder</a>
                 <div class="nav-links">
-                    <a href="/studfinder/faq">FAQ</a>
-                    <a href="/studfinder/privacy">Privacy</a>
-                    <a href="/studfinder/terms">Terms</a>
+                    <a href="/faq">FAQ</a>
+                    <a href="/privacy">Privacy</a>
+                    <a href="/terms">Terms</a>
                 </div>
             </nav>
         </div>
@@ -95,77 +95,136 @@
         <section class="content-section">
             <div class="content-container">
                 <h1>Privacy Policy</h1>
-                <p class="last-updated">Last Updated: December 11, 2025</p>
+                <p class="last-updated">Last Updated: December 12, 2025</p>
 
-                <p>At Appcellent, we are committed to protecting your privacy. This Privacy Policy explains how Stud
-                    Finder ("we," "our," or "the app") collects, uses, and safeguards your information.</p>
+                <p>Appcellent Yazılım Hizmetleri Anonim Şirketi ("Company", "we", "us", or "our") operates the mobile
+                    application Wall Wood Stud Finder (the "App"). We recognize that your privacy is a serious matter,
+                    and we are dedicated to protecting your data while providing a helpful utility tool.</p>
 
-                <h2>1. Information We Collect</h2>
+                <p>This Privacy Policy outlines how we handle data, the permissions we request, and your rights
+                    regarding your information. By downloading or using the App, you consent to the practices described
+                    in this document.</p>
 
-                <h3>1.1 Information You Provide</h3>
-                <p>Stud Finder does not require you to create an account or provide personal information to use the core
-                    features of the app.</p>
+                <h2>1. Hardware Permissions & Sensor Usage</h2>
 
-                <h3>1.2 Automatically Collected Information</h3>
-                <p>We may collect certain information automatically when you use the app, including:</p>
+                <p>To function as a stud detector, the App requires access to specific hardware features on your iOS
+                    device. We prioritize on-device processing to ensure your privacy.</p>
+
+                <p><strong>Magnetometer (Magnetic Sensor):</strong> The App accesses raw data from your device's
+                    magnetometer to detect magnetic field anomalies caused by metal studs, nails, or wiring behind
+                    walls.</p>
+
+                <p><strong>Privacy Guarantee:</strong> This sensor data is processed locally on your device in
+                    real-time. We do not record, store, upload, or transmit raw sensor data to our servers. Once the
+                    detection is displayed on the screen, the data is discarded.</p>
+
+                <h2>2. Information We Automatically Collect</h2>
+
+                <p>When you use the App, we may collect certain non-personal technical data to ensure the App runs
+                    smoothly and to improve user experience.</p>
+
                 <ul>
-                    <li><strong>Device Information:</strong> Device model, operating system version, and unique device
-                        identifiers</li>
-                    <li><strong>Usage Data:</strong> App features used, session duration, and interaction patterns</li>
-                    <li><strong>Sensor Data:</strong> Magnetometer readings used solely for stud detection functionality
-                        (not stored or transmitted)</li>
+                    <li><strong>Device Information:</strong> We may collect data such as your device model (e.g., iPhone
+                        15 Pro), operating system version (e.g., iOS 19.1), and preferred language settings.</li>
+                    <li><strong>Usage Metrics:</strong> We use aggregated, anonymous data to understand how the App is
+                        used (e.g., session length, frequency of use, and crash reports). This helps us identify bugs
+                        and optimize performance.</li>
+                    <li><strong>Advertising IDs:</strong> If you grant permission via the App Tracking Transparency
+                        (ATT) prompt, we may access your device's Identifier for Advertisers (IDFA) to deliver more
+                        relevant advertisements.</li>
                 </ul>
 
-                <h2>2. How We Use Your Information</h2>
-                <p>We use the collected information for the following purposes:</p>
+                <h2>3. Personal Data & User Input</h2>
+
+                <p>We generally do not require you to provide Personal Identifiable Information (PII) to use the core
+                    features of the App.</p>
+
                 <ul>
-                    <li>To provide and maintain the app's functionality</li>
-                    <li>To improve and optimize the user experience</li>
-                    <li>To analyze app usage and performance</li>
-                    <li>To provide customer support</li>
-                    <li>To comply with legal obligations</li>
+                    <li><strong>Customer Support:</strong> If you contact us via email for support, we will receive your
+                        email address and any information you choose to provide in your message. We use this strictly to
+                        resolve your inquiry.</li>
+                    <li><strong>User-Generated Content:</strong> If the App allows you to save screenshots or notes,
+                        these are stored locally on your device unless you actively choose to share them.</li>
                 </ul>
 
-                <h2>3. Data Storage and Security</h2>
-                <p>We implement appropriate technical and organizational measures to protect your information. Sensor
-                    data used for stud detection is processed locally on your device and is not stored or transmitted to
-                    our servers.</p>
+                <h2>4. In-App Purchases and Payments</h2>
 
-                <h2>4. Third-Party Services</h2>
-                <p>Stud Finder may use third-party services for analytics and payment processing. These services have
-                    their own privacy policies:</p>
+                <p>The App may offer premium features via In-App Purchases.</p>
+
                 <ul>
-                    <li><strong>Apple App Store:</strong> For in-app purchases and subscriptions</li>
-                    <li><strong>Analytics Services:</strong> To understand app usage and improve performance</li>
+                    <li><strong>Transaction Handling:</strong> All financial transactions are processed directly by
+                        Apple (App Store).</li>
+                    <li><strong>Data Security:</strong> We never access, view, or store your credit card details or
+                        billing information. We only receive a cryptographic token from Apple confirming that a purchase
+                        was completed.</li>
                 </ul>
 
-                <h2>5. In-App Purchases and Subscriptions</h2>
-                <p>All in-app purchases and subscriptions are processed through Apple's App Store. We do not have access
-                    to your payment information. Please refer to Apple's Privacy Policy for information on how they
-                    handle your data.</p>
+                <h2>5. Third-Party Services and Data Sharing</h2>
 
-                <h2>6. Children's Privacy</h2>
-                <p>Stud Finder is not directed to children under the age of 13. We do not knowingly collect personal
-                    information from children under 13. If you believe we have collected information from a child under
-                    13, please contact us immediately.</p>
+                <p>We do not sell your personal data. However, we partner with trusted third-party service providers to
+                    facilitate app functionality, analytics, and advertising.</p>
 
-                <h2>7. Your Rights</h2>
-                <p>Depending on your location, you may have certain rights regarding your personal information,
-                    including:</p>
                 <ul>
-                    <li>The right to access your personal information</li>
-                    <li>The right to correct inaccurate information</li>
-                    <li>The right to request deletion of your information</li>
-                    <li>The right to object to processing of your information</li>
+                    <li><strong>Service Providers:</strong> We may use third-party tools (such as Firebase or Google
+                        Analytics) to analyze usage patterns. These providers are contractually obligated to protect
+                        your data.</li>
+                    <li><strong>Legal Requirements:</strong> We may disclose information if required by law, such as to
+                        comply with a subpoena or to protect the safety of our users.</li>
+                    <li><strong>Business Transfers:</strong> If Appcellent Yazılım Hizmetleri Anonim Şirketi is involved
+                        in a merger, acquisition, or asset sale, your data may be transferred as part of that
+                        transaction.</li>
                 </ul>
 
-                <h2>8. Changes to This Privacy Policy</h2>
-                <p>We may update this Privacy Policy from time to time. We will notify you of any changes by posting the
-                    new Privacy Policy on this page and updating the "Last Updated" date.</p>
+                <h2>6. International Data Transfers</h2>
 
-                <h2>9. Contact Us</h2>
-                <p>If you have any questions about this Privacy Policy, please contact us at:</p>
-                <p><a href="mailto:contact@appcellent.co">contact@appcellent.co</a></p>
+                <p>Our servers and third-party service providers may be located outside of your country of residence. By
+                    using the App, you acknowledge that your data may be processed in jurisdictions with different data
+                    protection laws than your own. We implement appropriate safeguards (such as Standard Contractual
+                    Clauses) to protect your data during these transfers.</p>
+
+                <h2>7. Data Retention</h2>
+
+                <p>We retain technical log data only for as long as necessary to fulfill the purposes outlined in this
+                    policy or to comply with legal obligations. If you contact us for support, we may retain your
+                    correspondence until your issue is resolved.</p>
+
+                <h2>8. Your Privacy Rights (GDPR, CCPA, & Global)</h2>
+
+                <p>Depending on your location (including the EU, UK, and California), you have specific rights regarding
+                    your data:</p>
+
+                <ul>
+                    <li><strong>Right to Access:</strong> You may request details about the data we hold about you.</li>
+                    <li><strong>Right to Deletion:</strong> You may request that we delete your personal data (e.g.,
+                        support emails).</li>
+                    <li><strong>Right to Opt-Out:</strong> You can opt out of targeted advertising tracking via your iOS
+                        Settings > Privacy & Security > Tracking.</li>
+                </ul>
+
+                <p>To exercise these rights, please contact us at <a
+                        href="mailto:privacy@appcellent.co">privacy@appcellent.co</a>.</p>
+
+                <h2>9. Children's Privacy</h2>
+
+                <p>The App is not intended for children under the age of 16. We do not knowingly collect personal data
+                    from children. If we discover that we have inadvertently collected data from a minor, we will delete
+                    it immediately.</p>
+
+                <h2>10. Updates to This Policy</h2>
+
+                <p>We may update this Privacy Policy periodically to reflect changes in our app features or legal
+                    requirements. The "Last Updated" date at the top of this page will indicate when changes were made.
+                    We encourage you to review this page regularly.</p>
+
+                <h2>11. Contact Us</h2>
+
+                <p>If you have any questions, concerns, or requests regarding this Privacy Policy, please contact us:
+                </p>
+
+                <p><strong>Company Name:</strong> Appcellent Yazılım Hizmetleri Anonim Şirketi<br>
+                    <strong>Email:</strong> <a href="mailto:privacy@appcellent.co">privacy@appcellent.co</a><br>
+                    <strong>App Name:</strong> Wall Wood Stud Finder
+                </p>
 
             </div>
         </section>
@@ -181,21 +240,21 @@
                 <div class="footer-links">
                     <h4>App</h4>
                     <ul>
-                        <li><a href="/studfinder">Home</a></li>
-                        <li><a href="/studfinder/faq">FAQ</a></li>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/faq">FAQ</a></li>
                     </ul>
                 </div>
                 <div class="footer-links">
                     <h4>Legal</h4>
                     <ul>
-                        <li><a href="/studfinder/privacy">Privacy Policy</a></li>
-                        <li><a href="/studfinder/terms">Terms of Service</a></li>
+                        <li><a href="/privacy">Privacy Policy</a></li>
+                        <li><a href="/terms">Terms of Service</a></li>
                     </ul>
                 </div>
                 <div class="footer-links">
                     <h4>Company</h4>
                     <ul>
-                        <li><a href="/">Appcellent</a></li>
+                        <li><a href="https://appcellent.co">Appcellent</a></li>
                         <li><a href="mailto:contact@appcellent.co">contact@appcellent.co</a></li>
                     </ul>
                 </div>
