--- a/studfinder/terms.html
+++ b/studfinder/terms.html
@@ -81,11 +81,11 @@
     <header>
         <div class="container">
             <nav>
-                <a href="/studfinder" class="logo">Stud Finder</a>
+                <a href="/" class="logo">Stud Finder</a>
                 <div class="nav-links">
-                    <a href="/studfinder/faq">FAQ</a>
-                    <a href="/studfinder/privacy">Privacy</a>
-                    <a href="/studfinder/terms">Terms</a>
+                    <a href="/faq">FAQ</a>
+                    <a href="/privacy">Privacy</a>
+                    <a href="/terms">Terms</a>
                 </div>
             </nav>
         </div>
@@ -218,21 +218,21 @@
                 <div class="footer-links">
                     <h4>App</h4>
                     <ul>
-                        <li><a href="/studfinder">Home</a></li>
-                        <li><a href="/studfinder/faq">FAQ</a></li>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/faq">FAQ</a></li>
                     </ul>
                 </div>
                 <div class="footer-links">
                     <h4>Legal</h4>
                     <ul>
-                        <li><a href="/studfinder/privacy">Privacy Policy</a></li>
-                        <li><a href="/studfinder/terms">Terms of Service</a></li>
+                        <li><a href="/privacy">Privacy Policy</a></li>
+                        <li><a href="/terms">Terms of Service</a></li>
                     </ul>
                 </div>
                 <div class="footer-links">
                     <h4>Company</h4>
                     <ul>
-                        <li><a href="/">Appcellent</a></li>
+                        <li><a href="https://appcellent.co">Appcellent</a></li>
                         <li><a href="mailto:contact@appcellent.co">contact@appcellent.co</a></li>
                     </ul>
                 </div>
