--- a/studfinder/terms.html
+++ b/studfinder/terms.html
@@ -94,115 +94,90 @@
     <main>
         <section class="content-section">
             <div class="content-container">
-                <h1>Terms of Service</h1>
-                <p class="last-updated">Last Updated: December 11, 2025</p>
+                <h1>Terms of Use & End User License Agreement</h1>
+                <p class="last-updated">Effective Date: December 12, 2025</p>
 
-                <p>Please read these Terms of Service ("Terms") carefully before using Stud Finder ("the app") operated
-                    by Appcellent ("we," "us," or "our").</p>
+                <p>Welcome to Wall Wood Stud Finder (the "App"), a mobile application developed and operated by
+                    Appcellent Yazılım Hizmetleri Anonim Şirketi ("Company", "we", "us", or "our").</p>
 
-                <h2>1. Acceptance of Terms</h2>
-                <p>By downloading, installing, or using Stud Finder, you agree to be bound by these Terms. If you do not
-                    agree to these Terms, do not use the app.</p>
+                <p>By downloading, installing, or using the App, you agree to be bound by these Terms of Use ("Terms").
+                    If you do not agree to these Terms, please do not use the App.</p>
 
-                <h2>2. License to Use</h2>
-                <p>We grant you a limited, non-exclusive, non-transferable, revocable license to use Stud Finder for
-                    personal, non-commercial purposes, subject to these Terms.</p>
+                <h2>1. Acknowledgment of Apple's Standard EULA</h2>
 
-                <h3>2.1 Restrictions</h3>
-                <p>You agree not to:</p>
+                <p>Our App is licensed, not sold, to you. We adopt the Apple Standard Licensed Application End User
+                    License Agreement (EULA) as the foundation of this agreement. By using our App, you agree to the
+                    terms set forth by Apple, which can be viewed here: <a
+                        href="https://www.apple.com/legal/internet-services/itunes/dev/stdeula/"
+                        target="_blank">https://www.apple.com/legal/internet-services/itunes/dev/stdeula/</a></p>
+
+                <p>In the event of any conflict between this document and the Apple Standard EULA, the terms in this
+                    document shall prevail specifically regarding the limitations of liability related to construction
+                    and safety.</p>
+
+                <h2>2. Safety Disclaimer (Critical Information)</h2>
+
+                <p><strong>PLEASE READ CAREFULLY:</strong> The App utilizes the magnetometer sensor in your device to
+                    detect magnetic fields. While we strive for accuracy, the App is intended for informational and
+                    guidance purposes only.</p>
+
                 <ul>
-                    <li>Modify, reverse engineer, or decompile the app</li>
-                    <li>Use the app for any illegal or unauthorized purpose</li>
-                    <li>Attempt to gain unauthorized access to any part of the app</li>
-                    <li>Remove or alter any proprietary notices from the app</li>
-                    <li>Use the app in a manner that could damage or impair our services</li>
+                    <li><strong>Not a Professional Substitute:</strong> This App is not a replacement for
+                        professional-grade industrial equipment.</li>
+                    <li><strong>Interference:</strong> Readings can be affected by your device's case, other electronic
+                        devices, and the specific composition of your walls.</li>
+                    <li><strong>Risk of Damage:</strong> You assume full responsibility for any drilling, hammering, or
+                        construction work you perform. Appcellent Yazılım Hizmetleri Anonim Şirketi shall not be liable
+                        for any physical damage, personal injury, property damage (such as drilling into electrical
+                        wires or water pipes), or financial loss resulting from reliance on this App.</li>
+                    <li><strong>Always Verify:</strong> We strongly recommend confirming the location of studs and wires
+                        with physical tools or professional assistance before conducting invasive work.</li>
                 </ul>
 
-                <h2>3. Subscriptions and Purchases</h2>
+                <h2>3. Subscription and Payments</h2>
 
-                <h3>3.1 Premium Features</h3>
-                <p>Certain features of the app may require a subscription or one-time purchase. All purchases are
-                    processed through Apple's App Store and are subject to Apple's Terms of Service.</p>
+                <p>If the App offers subscription services or In-App Purchases:</p>
 
-                <h3>3.2 Subscription Terms</h3>
                 <ul>
-                    <li>Subscriptions automatically renew unless canceled at least 24 hours before the end of the
-                        current period</li>
-                    <li>Your account will be charged for renewal within 24 hours prior to the end of the current period
-                    </li>
-                    <li>You can manage and cancel subscriptions in your App Store account settings</li>
-                    <li>No refunds are provided for unused portions of a subscription period</li>
+                    <li><strong>Billing:</strong> All payments are processed securely through your Apple ID account. We
+                        do not store credit card information.</li>
+                    <li><strong>Cancellation:</strong> Subscriptions automatically renew unless auto-renew is turned off
+                        at least 24 hours before the end of the current period. You can manage this in your iOS Account
+                        Settings.</li>
                 </ul>
 
-                <h3>3.3 Free Trial</h3>
-                <p>If a free trial is offered, you will be charged the subscription fee after the trial period ends
-                    unless you cancel before the trial expires.</p>
+                <h2>4. Intellectual Property</h2>
 
-                <h2>4. Disclaimer of Warranties</h2>
-                <p>Stud Finder is provided "as is" and "as available" without warranties of any kind, either express or
-                    implied. We do not guarantee that:</p>
-                <ul>
-                    <li>The app will be error-free or uninterrupted</li>
-                    <li>Defects will be corrected</li>
-                    <li>The app is free of viruses or harmful components</li>
-                    <li>Results obtained from using the app will be accurate or reliable</li>
-                </ul>
+                <p>The App, including its code, design, interface, and graphics, is the proprietary property of
+                    Appcellent Yazılım Hizmetleri Anonim Şirketi and is protected by international copyright and
+                    trademark laws. You may not reverse engineer, decompile, or attempt to extract the source code of
+                    the App.</p>
 
-                <h2>5. Limitation of Liability</h2>
-                <p>To the maximum extent permitted by law, Appcellent shall not be liable for any indirect, incidental,
-                    special, consequential, or punitive damages resulting from:</p>
-                <ul>
-                    <li>Your use or inability to use the app</li>
-                    <li>Any errors or inaccuracies in the app's measurements</li>
-                    <li>Damage to property or personal injury resulting from app usage</li>
-                    <li>Unauthorized access to or alteration of your data</li>
-                </ul>
+                <h2>5. Third-Party Services</h2>
 
-                <h2>6. Professional Use Disclaimer</h2>
-                <p><strong>Important:</strong> Stud Finder is designed as a convenience tool and should not be relied
-                    upon as the sole method for professional construction or renovation work. Always verify measurements
-                    and stud locations using professional-grade equipment before drilling, cutting, or making structural
-                    modifications.</p>
+                <p>The App may contain links to third-party websites or services (such as advertisements) that are not
+                    owned or controlled by us. We have no control over, and assume no responsibility for, the content or
+                    practices of any third-party sites.</p>
 
-                <h2>7. Intellectual Property</h2>
-                <p>All content, features, and functionality of Stud Finder, including but not limited to text, graphics,
-                    logos, and software, are the exclusive property of Appcellent and are protected by copyright,
-                    trademark, and other intellectual property laws.</p>
+                <h2>6. Limitation of Liability</h2>
 
-                <h2>8. User Conduct</h2>
-                <p>You agree to use the app in compliance with all applicable laws and regulations. You are solely
-                    responsible for your conduct while using the app.</p>
+                <p>To the maximum extent permitted by applicable law, in no event shall the Company be liable for any
+                    indirect, punitive, incidental, special, consequential, or exemplary damages, including without
+                    limitation damages for loss of profits, goodwill, use, data, or other intangible losses, arising out
+                    of or relating to the use of, or inability to use, the Service.</p>
 
-                <h2>9. Privacy</h2>
-                <p>Your use of the app is also governed by our Privacy Policy, which can be found at <a
-                        href="/studfinder/privacy">studfinder.appcellent.co/privacy</a>.</p>
+                <h2>7. Changes to Terms</h2>
 
-                <h2>10. Modifications to the App</h2>
-                <p>We reserve the right to modify, suspend, or discontinue the app or any features at any time without
-                    notice. We will not be liable to you or any third party for any modification, suspension, or
-                    discontinuation of the app.</p>
+                <p>We reserve the right to modify these Terms at any time. We will notify you of any changes by posting
+                    the new Terms on this page and updating the "Effective Date" above.</p>
 
-                <h2>11. Changes to Terms</h2>
-                <p>We may update these Terms from time to time. We will notify you of any changes by posting the new
-                    Terms on this page and updating the "Last Updated" date. Your continued use of the app after changes
-                    constitutes acceptance of the new Terms.</p>
+                <h2>8. Contact Information</h2>
 
-                <h2>12. Termination</h2>
-                <p>We may terminate or suspend your access to the app immediately, without prior notice, for any reason,
-                    including if you breach these Terms.</p>
+                <p>If you have any questions about these Terms, please contact us.</p>
 
-                <h2>13. Governing Law</h2>
-                <p>These Terms shall be governed by and construed in accordance with the laws of the jurisdiction in
-                    which Appcellent operates, without regard to its conflict of law provisions.</p>
-
-                <h2>14. Contact Information</h2>
-                <p>If you have any questions about these Terms, please contact us at:</p>
-                <p><a href="mailto:contact@appcellent.co">contact@appcellent.co</a></p>
-
-                <h2>15. Severability</h2>
-                <p>If any provision of these Terms is found to be unenforceable or invalid, that provision will be
-                    limited or eliminated to the minimum extent necessary so that these Terms will otherwise remain in
-                    full force and effect.</p>
+                <p><strong>Company:</strong> Appcellent Yazılım Hizmetleri Anonim Şirketi<br>
+                    <strong>Email:</strong> <a href="mailto:support@appcellent.co">support@appcellent.co</a>
+                </p>
 
             </div>
         </section>
@@ -233,7 +208,6 @@
                     <h4>Company</h4>
                     <ul>
                         <li><a href="https://appcellent.co">Appcellent</a></li>
-                        <li><a href="mailto:contact@appcellent.co">contact@appcellent.co</a></li>
                     </ul>
                 </div>
             </div>
