Update FAQ content with User Manual and Troubleshooting guide

--- a/studfinder/faq.html
+++ b/studfinder/faq.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAQ - Stud Finder</title>
-    <meta name="description" content="Frequently Asked Questions about Stud Finder app by Appcellent.">
+    <title>User Manual & Help Center - Wall Wood Stud Finder</title>
+    <meta name="description" content="User Manual, Troubleshooting and FAQ for Wall Wood Stud Finder app.">
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="icon"
         href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🔍</text></svg>">
@@ -33,6 +33,64 @@
             font-size: 18px;
         }
 
+        .section-title {
+            font-size: 28px;
+            font-weight: 600;
+            margin-top: 48px;
+            margin-bottom: 24px;
+            padding-bottom: 12px;
+            border-bottom: 1px solid var(--glass-border);
+        }
+
+        .guide-step {
+            margin-bottom: 32px;
+        }
+
+        .guide-step h3 {
+            font-size: 20px;
+            font-weight: 600;
+            margin-bottom: 12px;
+            color: var(--text-primary);
+        }
+
+        .guide-step p {
+            color: var(--text-secondary);
+            line-height: 1.7;
+        }
+
+        .troubleshoot-item {
+            background: var(--bg-secondary);
+            padding: 24px;
+            border-radius: 12px;
+            margin-bottom: 16px;
+            border: 1px solid var(--glass-border);
+        }
+
+        .troubleshoot-item h3 {
+            font-size: 18px;
+            font-weight: 600;
+            margin-bottom: 16px;
+            color: var(--accent-color);
+        }
+
+        .troubleshoot-item ul {
+            list-style: none;
+        }
+
+        .troubleshoot-item li {
+            margin-bottom: 8px;
+            color: var(--text-secondary);
+            padding-left: 16px;
+            position: relative;
+        }
+
+        .troubleshoot-item li::before {
+            content: "•";
+            position: absolute;
+            left: 0;
+            color: var(--text-primary);
+        }
+
         .faq-item {
             margin-bottom: 24px;
             border-bottom: 1px solid var(--glass-border);
@@ -46,7 +104,7 @@
         .faq-item summary {
             cursor: pointer;
             font-weight: 600;
-            font-size: 20px;
+            font-size: 18px;
             padding: 12px 0;
             list-style: none;
             display: flex;
@@ -73,28 +131,6 @@
             margin-top: 12px;
             color: var(--text-secondary);
             line-height: 1.7;
-            padding-left: 0;
-        }
-
-        .faq-item ul {
-            list-style: disc;
-            margin-left: 24px;
-            margin-top: 12px;
-        }
-
-        .faq-item li {
-            color: var(--text-secondary);
-            margin-bottom: 8px;
-            line-height: 1.7;
-        }
-
-        .faq-item a {
-            color: var(--accent-color);
-            text-decoration: underline;
-        }
-
-        .faq-item a:hover {
-            color: var(--accent-hover);
         }
 
         .contact-section {
@@ -102,7 +138,7 @@
             padding: 32px;
             border-radius: 18px;
             border: 1px solid var(--glass-border);
-            margin-top: 48px;
+            margin-top: 64px;
             text-align: center;
         }
 
@@ -118,7 +154,8 @@
 
         .contact-section a {
             color: var(--accent-color);
-            text-decoration: underline;
+            font-weight: 600;
+            font-size: 18px;
         }
     </style>
 </head>
@@ -141,130 +178,122 @@
     <main>
         <section class="content-section">
             <div class="content-container">
-                <h1>Frequently Asked Questions</h1>
-                <p class="intro">Find answers to common questions about Stud Finder. If you can't find what you're
-                    looking for, feel free to contact us.</p>
+                <h1>User Manual & Help Center</h1>
+                <p class="intro">Welcome to the support page. Here you can find instructions on how to get the most
+                    accurate results from the app and solutions to common questions.</p>
 
-                <details class="faq-item">
-                    <summary>How does Stud Finder work?</summary>
-                    <p>Stud Finder uses your iPhone's built-in magnetometer to detect magnetic fields created by metal
-                        fasteners (nails or screws) in wall studs. When you move your device across a wall, the app
-                        detects changes in the magnetic field and alerts you when a stud is detected.</p>
-                </details>
+                <h2 class="section-title">Quick Start Guide</h2>
 
-                <details class="faq-item">
-                    <summary>Which devices are compatible with Stud Finder?</summary>
-                    <p>Stud Finder is compatible with iPhone models that have a magnetometer sensor. This includes most
-                        iPhone models from iPhone 6 and newer. The app requires iOS 15.0 or later.</p>
-                </details>
+                <div class="guide-step">
+                    <h3>1. Prepare Your Device</h3>
+                    <p>Before starting, ensure your device doesn't have a thick magnetic case, as this can interfere
+                        with the sensors. Hold your phone comfortably.</p>
+                </div>
 
-                <details class="faq-item">
-                    <summary>How accurate is the stud detection?</summary>
-                    <p>Stud Finder provides reliable detection in most standard wall constructions. However, accuracy
-                        can be affected by:</p>
-                    <ul>
-                        <li>Wall thickness and material composition</li>
-                        <li>Presence of metal pipes, wiring, or other objects</li>
-                        <li>Distance between the device and the wall surface</li>
-                        <li>Environmental magnetic interference</li>
-                    </ul>
-                    <p>For professional construction work, we recommend verifying measurements with professional-grade
-                        equipment.</p>
-                </details>
-
-                <details class="faq-item">
-                    <summary>Do I need an internet connection to use the app?</summary>
-                    <p>No, Stud Finder works completely offline. All stud detection happens locally on your device using
-                        the magnetometer sensor. An internet connection is only required for initial download and
-                        updates.</p>
-                </details>
-
-                <details class="faq-item">
-                    <summary>What's included in the premium subscription?</summary>
-                    <p>The premium subscription unlocks:</p>
-                    <ul>
-                        <li>Unlimited scans without restrictions</li>
-                        <li>Advanced haptic feedback for precise detection</li>
-                        <li>Built-in level tool for perfect alignment</li>
-                        <li>Ad-free experience</li>
-                        <li>Priority customer support</li>
-                    </ul>
-                </details>
-
-                <details class="faq-item">
-                    <summary>How do I cancel my subscription?</summary>
-                    <p>To cancel your subscription:</p>
-                    <ul>
-                        <li>Open the Settings app on your iPhone</li>
-                        <li>Tap your name at the top</li>
-                        <li>Tap "Subscriptions"</li>
-                        <li>Select Stud Finder</li>
-                        <li>Tap "Cancel Subscription"</li>
-                    </ul>
-                    <p>You'll continue to have access to premium features until the end of your current billing period.
+                <div class="guide-step">
+                    <h3>2. Calibration & Mode Selection</h3>
+                    <p>Open the app and select your preferred scanning mode. It is recommended to wave your phone in a
+                        "figure-8" motion briefly to calibrate the internal magnetometer before placing it on the wall.
                     </p>
-                </details>
+                </div>
 
-                <details class="faq-item">
-                    <summary>Can I get a refund?</summary>
-                    <p>All purchases are processed through Apple's App Store. Refund requests must be submitted to Apple
-                        directly. You can request a refund by visiting <a href="https://reportaproblem.apple.com"
-                            target="_blank">reportaproblem.apple.com</a> and signing in with your Apple ID.</p>
-                </details>
+                <div class="guide-step">
+                    <h3>3. Scanning the Surface</h3>
+                    <p>Place your device flat against the wall. Move it slowly and steadily horizontally. Avoid quick or
+                        jerky movements for the best accuracy.</p>
+                </div>
 
-                <details class="faq-item">
-                    <summary>Why isn't the app detecting studs?</summary>
-                    <p>If you're having trouble detecting studs, try the following:</p>
+                <div class="guide-step">
+                    <h3>4. Reading the Signals</h3>
+                    <p>Watch the on-screen meter. The app breaks down the magnetic field into X, Y, and Z axes. When the
+                        numbers spike or the graph peaks, you are directly over a dense object like a stud or metal
+                        pipe.</p>
+                </div>
+
+                <div class="guide-step">
+                    <h3>5. Adjusting Sensitivity</h3>
+                    <p>If the meter is maxing out too easily or not picking up anything, use the slider to adjust the
+                        sensitivity threshold. Lower it for thin drywall, raise it for thicker surfaces.</p>
+                </div>
+
+                <h2 class="section-title">Understanding the Features</h2>
+
+                <div class="guide-step">
+                    <h3>Real-Time Coordinates (X, Y, Z)</h3>
+                    <p>The app provides raw sensor data. The Z-axis usually represents the depth/direct magnetic pull
+                        from the wall. Watching these numbers helps pinpoint the exact center of the stud.</p>
+                </div>
+
+                <div class="guide-step">
+                    <h3>Haptic & Audio Feedback</h3>
+                    <p>You don't always need to look at the screen. Enable vibration and sound in the settings to get a
+                        "beep" or "buzz" the moment metal is detected.</p>
+                </div>
+
+                <h2 class="section-title">Troubleshooting Common Issues</h2>
+
+                <div class="troubleshoot-item">
+                    <h3>"I'm not detecting anything."</h3>
                     <ul>
-                        <li>Ensure your iPhone case doesn't contain metal or magnets</li>
-                        <li>Remove any magnetic accessories from your phone</li>
-                        <li>Hold the device flat against the wall</li>
-                        <li>Move slowly and steadily across the wall surface</li>
-                        <li>Calibrate the app by moving away from the wall and returning</li>
-                        <li>Check that you've granted necessary sensor permissions</li>
+                        <li><strong>Check Case:</strong> Remove any magnetic phone cases or pop-sockets.</li>
+                        <li><strong>Sensitivity:</strong> Your sensitivity might be too low. Increase the slider level.
+                        </li>
+                        <li><strong>Interference:</strong> Ensure there are no other strong electronic devices (like a
+                            microwave or large speaker) nearby.</li>
                     </ul>
-                </details>
+                </div>
 
-                <details class="faq-item">
-                    <summary>Does the app work on all wall types?</summary>
-                    <p>Stud Finder works best on standard drywall with wood or metal studs. Performance may vary on:</p>
+                <div class="troubleshoot-item">
+                    <h3>"The readings are erratic or jumping."</h3>
                     <ul>
-                        <li>Plaster walls</li>
-                        <li>Concrete or brick walls</li>
-                        <li>Walls with extensive metal lath</li>
-                        <li>Walls with significant electrical wiring or plumbing</li>
+                        <li><strong>Stability:</strong> Ensure the phone is flush against the wall.</li>
+                        <li><strong>Reset:</strong> Restart the app to clear the sensor cache.</li>
+                        <li><strong>Recalibrate:</strong> Move the phone in the air away from the wall for a few seconds
+                            to reset the magnetometer.</li>
                     </ul>
-                </details>
+                </div>
 
-                <details class="faq-item">
-                    <summary>How do I use the level feature?</summary>
-                    <p>The level feature (available in premium) helps you ensure perfect alignment:</p>
+                <div class="troubleshoot-item">
+                    <h3>"No Sound or Vibration."</h3>
                     <ul>
-                        <li>Tap the level icon in the app</li>
-                        <li>Place your iPhone against the surface you want to level</li>
-                        <li>The app will show you the angle and provide visual feedback</li>
-                        <li>Adjust until the indicator shows level (0 degrees)</li>
+                        <li>Check your iPhone's silent mode switch.</li>
+                        <li>Go to your device Settings and ensure the app has permission to use Haptics/Audio.</li>
                     </ul>
+                </div>
+
+                <h2 class="section-title">Frequently Asked Questions (FAQ)</h2>
+
+                <details class="faq-item">
+                    <summary>Q: What exactly do the X, Y, and Z numbers show?</summary>
+                    <p>A: These represent the 3-dimensional magnetic field around your phone. When scanning a wall, a
+                        sudden change in these values indicates a disturbance in the magnetic field—usually caused by a
+                        nail, screw, or metal stud behind the drywall.</p>
                 </details>
 
                 <details class="faq-item">
-                    <summary>Is my data private and secure?</summary>
-                    <p>Yes. Stud Finder processes all sensor data locally on your device. We don't collect, store, or
-                        transmit your sensor readings. For more information, please read our <a
-                            href="/studfinder/privacy">Privacy Policy</a>.</p>
+                    <summary>Q: Can I scan continuously?</summary>
+                    <p>A: Yes. You don't need to restart the app for a new wall. Just lift the device, move to the new
+                        area, and start sliding again.</p>
                 </details>
 
                 <details class="faq-item">
-                    <summary>How do I contact support?</summary>
-                    <p>For support inquiries, feature requests, or bug reports, please email us at <a
-                            href="mailto:contact@appcellent.co">contact@appcellent.co</a>. We typically respond within
-                        24-48 hours.</p>
+                    <summary>Q: How do I know where to drill?</summary>
+                    <p>A: Locate the spot where the signal is strongest (the peak of the meter). We recommend marking
+                        this spot and scanning slightly to the left and right to confirm you have found the center of
+                        the stud.</p>
+                </details>
+
+                <details class="faq-item">
+                    <summary>Q: My signal is weak. What should I do?</summary>
+                    <p>A: Walls with double-layer drywall or plaster can be harder to scan. Try increasing the
+                        sensitivity setting to the maximum level and move the device very slowly.</p>
                 </details>
 
                 <div class="contact-section">
-                    <h2>Still have questions?</h2>
-                    <p>We're here to help! Reach out to our support team.</p>
-                    <a href="mailto:contact@appcellent.co">contact@appcellent.co</a>
+                    <h2>Contact Support</h2>
+                    <p style="color: var(--text-secondary); margin-bottom: 16px;">Still having trouble? We are here to
+                        help.</p>
+                    <a href="mailto:support@appcellent.co">support@appcellent.co</a>
                 </div>
 
             </div>
